feat: Correction after roman's review 2nd batch
Focus on RDBMS small fixes